--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </head>
 <body>
 <html>    
-    <h2 id="Home">Final Project mmm</h2>
+    <h2 id="Home">Final Project</h2>
     <header>
     <p>Developed by  Meghana under the guidance of Harsit sir, TAP Academy.
         <br>I am a student developer. This landing page displays
